--- a/Backend/package.json
+++ b/Backend/package.json
@@ -23,6 +23,7 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
     "mysql2": "^3.14.3",
+    "node-cron": "^4.2.1",
     "sequelize": "^6.37.7",
     "sequelize-cli": "^6.6.3",
     "socket.io": "^4.8.1"
@@ -35,6 +36,7 @@
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/multer": "^2.0.0",
+    "@types/node-cron": "^3.0.11",
     "@types/socket.io": "^3.0.1",
     "ts-node": "^10.9.2",
     "tsx": "^4.20.3",
